# TempleRun2

./: CMakeLists.txt  build.sh  compile.sh  configure.sh  readme.md  run.sh
assets/textures/: pacmanskin.jpg~
glimac/include/glimac/: Cameras.hpp  Light.hpp  Mesh.hpp  Model.hpp  MoveMatrix.hpp  Program.hpp  TTFtext.hpp  TrackballCamera.hpp  UI.hpp  UIScreens.hpp  glpp.hpp  includes.hpp  rectangle2D.hpp
glimac/src/: Cameras.cpp  Cone.cpp  FreeflyCamera.cpp  HighScores.cpp  Image.cpp  Light.cpp  Mesh.cpp  Model.cpp  MoveMatrix.cpp  Observer.cpp  Sphere.cpp  TTFtext.cpp  TrackballCamera.cpp  UI.cpp  UIScreens.cpp  rectangle2D.cpp  tiny_obj_loader.cpp
map/: fileTest.txt
saves/: slot1.txt  slot2.txt  slot3.txt
src/: CMakeLists.txt  includes.hpp  templeRun.cpp  test.cpp
src/Game/IntegrationMarie/: Player.hpp
src/Game/include/: Cameras.hpp  Case.hpp  Character.hpp  Collectible.hpp  Collectibles.hpp  Constants.hpp  Drawer.hpp  FreeflyCamera.hpp  Game.hpp  HighScores.hpp  Matrice.hpp  MoveMatrix.hpp  ObjProgram.hpp  Render3D.hpp  Terrain.hpp  TextureManager.hpp  TileDrawer.hpp  Vertex3D.hpp  cameraDebug.hpp
src/Game/src/: Case.cpp  Character.cpp  Collectible.cpp  Collectibles.cpp  Drawer.cpp  Game.cpp  HighScores.cpp  Matrice.cpp  MoveMatrix.cpp  ObjProgram.cpp  RandomWorld.cpp  Render3D.cpp  Terrain.cpp  TextureManager.cpp  TileDrawer.cpp  cameraDebug.cpp  formProgram.cpp
src/Render/include/: Cameras.hpp  Collectible.hpp  CollectibleRenderer.hpp  Collectibles.hpp  FreeflyCamera.hpp  Game.hpp  (+14 more)
src/moteurRendu/: Case.hpp  TempleRun.cpp  addition.h  cameraprojet.cpp
src/shaders/: case3D.fs.glsl  case3D.vs.glsl  directionallight.fs.glsl  obj.fs.glsl  obj.vs.glsl  pointlight.fs.glsl  rect2D.vs.glsl  skyBox.vs.glsl  tex3D.fs.glsl
test/: fileTest.txt
(+38 files in other folders)
